# media-queries

./: .gitignore  CMakeLists.txt  Frame.cpp  Frame.h  Image.cpp  Image.h  MyImage.cpp  MyImage.h  Resource.cpp  Resource.h  SceneDetector.cpp  main.cpp
